bugfix: clock time was truncated

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -20,7 +20,7 @@
   text-length: 10;
   x: 50%-15%;
   y: -20;
-  width: 66%;
+  width: 300;
   height: 100%;
   fill: #FA1E43;
 }
